<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:orientation="vertical"
    android:background="@drawable/home_head_bg"
     >

    <TextView
        android:id="@+id/top_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_title"
        android:text="@string/result_title"
        
        android:layout_centerInParent="true" />
     <TextView
        android:id="@+id/top_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_button"
        android:text="@string/refresh"
        android:layout_marginRight="20dip"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/rectange_bg_selector" />
     <TextView
        android:id="@+id/top_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_button"
        android:text="@string/back"
        android:layout_marginLeft="20dip"
        android:layout_centerVertical="true"
        android:background="@drawable/back_selector"
        android:layout_alignParentLeft="true" />
    
</RelativeLayout>